@@ -1,3 +1,14 @@
+2018-06-02  Youenn Fablet  <youenn@apple.com>
+
+        Add a sandbox profile for com.cisco.webex.plugin.gpc64 plugin
+        https://bugs.webkit.org/show_bug.cgi?id=186110
+
+        Reviewed by Brent Fulgham.
+
+        * PluginProcess/mac/com.apple.WebKit.plugin-common.sb.in: Webex needs to create some symlinks.
+        * Resources/PlugInSandboxProfiles/com.cisco.webex.plugin.gpc64.sb: Added.
+        * WebKit.xcodeproj/project.pbxproj:
+
 2018-06-01  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         [Extra zoom mode] The user should always be able to double tap to zoom to a scale of at least 1
